--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ flutter:
       android:
         package: com.lib.flutter_blue_plus
         pluginClass: FlutterBluePlusPlugin
+      ohos:
+        package: com.example.flutter_blue_plus
+        pluginClass: FlutterBluePlusPlugin
       ios:
         pluginClass: FlutterBluePlusPlugin
       macos:
